--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -88,6 +88,16 @@ html {
     display: flex;
     position: relative;
 
+    .clickLayer {
+      top: 0;
+      left: 0;
+      opacity: 0;
+      z-index: 999;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    }
+
     .primaryTimerWarning {
       top: 0;
       left: 0;
@@ -105,11 +115,11 @@ html {
 
     div {
       margin: 0;
-      width: 70%;
+      width: 100%;
       position: relative;
 
       input {
-        width: 100%;
+        width: 70%;
         outline: none;
         color: $dark;
         padding: 20px;
@@ -128,35 +138,36 @@ html {
         }
       }
 
+      button {
+        width: 30%;
+        color: $dark;
+        padding: 20px;
+        background-color: $mediumGrey;
+        border-radius: 0 10px 10px 0;
+        border: 2px solid $mediumGrey;
+        @extend .mediumResponsiveFont;
+        @extend .buttonBaseStyle;
+      }
+
       .errorMessage {
         top: 0;
         left: 0;
         width: 100%;
         padding: 20px;
         color: $warning;
-        position: absolute;
         text-align: right;
+        position: absolute;
+        border-radius: 10px;
         pointer-events: none;
         box-sizing: border-box;
-        border-radius: 10px 0 0 10px;
         border: 2px solid $warning;
         background: linear-gradient(
           90deg,
           rgba(255, 255, 255, 0) 0%,
-          rgba(255, 255, 255, 1) 30%
+          rgba(255, 255, 255, 1) 50%
         );
         @extend .mediumResponsiveFont;
       }
-    }
-
-    button {
-      width: 30%;
-      color: $dark;
-      padding: 20px;
-      background-color: $mediumGrey;
-      border-radius: 0 10px 10px 0;
-      @extend .mediumResponsiveFont;
-      @extend .buttonBaseStyle;
     }
   }
 
