Add set rate warning to task input. Tweak action creators. Task section working, stop function added.

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -266,6 +266,7 @@ html body {
   display: -ms-flexbox;
   display: flex;
   max-width: 565px;
+  position: relative;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -277,6 +278,35 @@ html body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: #fdfdfd;
+}
+
+.taskInput .inputGuard {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  border-radius: 10px;
+}
+
+.taskInput .showSetRateWarning {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #ff1400;
+  position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #fdfdfd;
 }
 
