--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -2,8 +2,8 @@ $primaryFont: 'Montserrat', sans-serif;
 $dark: rgb(82, 82, 82);
 $darkGrey: rgb(104, 104, 104);
 $mediumGrey: rgb(228, 228, 228);
-$lightGrey: rgb(240, 240, 240);
-$extraLightGrey: rgb(246, 246, 246);
+$lightGrey: rgb(243, 243, 243);
+$extraLightGrey: rgb(249, 249, 249);
 $light: rgb(253, 253, 253);
 $warning: rgb(255, 20, 0);
 
@@ -13,7 +13,10 @@ $warning: rgb(255, 20, 0);
 .mediumResponsiveFont {
   font-size: 0.9em;
 }
-.LargeResponsiveFont {
+.largeResponsiveFont {
+  font-size: 1.6em;
+}
+.XLargeResponsiveFont {
   font-size: 1.7em;
 }
 .buttonBaseStyle {
@@ -24,6 +27,22 @@ $warning: rgb(255, 20, 0);
 }
 .hide {
   visibility: hidden;
+}
+
+.paddingOne {
+  padding-top: 18px;
+  padding-right: 20px;
+  padding-bottom: 12px;
+  padding-left: 20px;
+}
+.paddingTwo {
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+.inputPadding {
+  padding: 10px;
 }
 
 html {
@@ -40,62 +59,107 @@ html {
   }
 }
 
-.container {
-  padding: 20px;
-  display: flex;
-  margin: 0 auto;
-  overflow: hidden;
-  min-width: 320px;
-  min-height: 96vh;
-  min-height: 576px;
-  max-width: 900px;
-  align-items: center;
-  border-radius: 10px;
-  box-sizing: border-box;
-  flex-direction: column;
-
-  h2 {
-    color: $light;
-    text-align: center;
-    margin: 0 auto 20px auto;
-  }
-  .completedTaskList {
-    width: 100%;
-    display: flex;
-    margin-top: 10px;
-    border-radius: 10px;
-    flex-direction: column;
-    background-color: $light;
-
-    .completedTaskEntry {
-      display: flex;
-      color: $dark;
-      margin-top: 2px;
-      padding: 10px 30px;
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-between;
-      @extend .responsiveFont;
-    }
-  }
-}
-
 .dollarSign {
   position: relative;
 
   &:before {
-    top: 3px;
-    left: 10px;
+    top: 3.35px;
+    left: 9.5px;
     content: '$';
     position: absolute;
     @extend .responsiveFont;
   }
 }
 
+.redButton {
+  padding: 0;
+  color: $warning;
+  background-color: transparent;
+  @extend .buttonBaseStyle;
+  @extend .mediumResponsiveFont;
+}
+
+.container {
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  overflow: hidden;
+  min-width: 320px;
+  min-height: 96vh;
+  min-height: 576px;
+  max-width: 600px;
+  align-items: center;
+  box-sizing: border-box;
+  flex-direction: column;
+
+  h2 {
+    color: $light;
+    text-align: center;
+    margin: 0 auto 10px auto;
+  }
+  .completedTaskList {
+    width: 100%;
+    display: flex;
+    margin-top: 5px;
+    flex-direction: column;
+
+    .completedTaskEntry {
+      color: $dark;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 5px;
+      @extend .responsiveFont;
+
+      .taskName {
+        width: 100%;
+        display: flex;
+        color: $darkGrey;
+        @extend .paddingOne;
+        flex-direction: row;
+        box-sizing: border-box;
+        align-items: flex-start;
+        justify-content: flex-start;
+        border-radius: 10px 10px 0 0;
+        background-color: $extraLightGrey;
+
+        span {
+          color: $dark;
+          padding-left: 10px;
+        }
+      }
+      .taskDetails {
+        margin: 0;
+        color: $dark;
+        background-color: $light;
+        @extend .paddingTwo;
+
+        span {
+          color: $darkGrey;
+        }
+      }
+
+      .totalTaskValue {
+        display: flex;
+        color: $darkGrey;
+        flex-direction: row;
+        border-radius: 0 0 10px 10px;
+        justify-content: space-between;
+        background-color: $extraLightGrey;
+        @extend .paddingOne;
+
+        span {
+          color: $dark;
+          font-size: 1.2em;
+          padding-left: 10px;
+        }
+      }
+    }
+  }
+}
+
 .primaryControls {
   width: 100%;
   display: flex;
-  max-width: 565px;
   border-radius: 10px;
   margin-bottom: 10px;
   align-items: center;
@@ -105,10 +169,10 @@ html {
   .inputAndDisplay {
     width: 100%;
     display: flex;
-    padding: 10px;
     align-items: center;
-    flex-direction: column;
     box-sizing: border-box;
+    flex-direction: column;
+    @extend .inputPadding;
 
     form {
       width: 100%;
@@ -124,13 +188,13 @@ html {
           width: 70%;
           outline: none;
           color: $dark;
-          padding: 20px;
+          padding: 20px 18px;
           border-style: none;
           box-sizing: border-box;
           border-radius: 10px 0 0 0;
           font-family: $primaryFont;
-          background-color: $lightGrey;
-          border: 2px solid $lightGrey;
+          background-color: $extraLightGrey;
+          border: 2px solid $mediumGrey;
           @extend .mediumResponsiveFont;
 
           &:focus {
@@ -172,123 +236,111 @@ html {
         }
       }
     }
+  }
+  .primaryTimer {
+    width: 100%;
+    color: $dark;
+    display: flex;
+    padding-top: 0;
+    position: relative;
+    flex-direction: column;
+    box-sizing: border-box;
 
     .valueBreakdown {
       width: 100%;
       display: flex;
       color: $darkGrey;
-      margin-top: 10px;
-      padding: 10px 20px;
+      text-align: center;
       align-items: center;
       flex-direction: row;
       box-sizing: border-box;
-      background-color: $extraLightGrey;
       justify-content: space-between;
+      background-color: $lightGrey;
       @extend .responsiveFont;
+      @extend .paddingOne;
     }
   }
-  .primaryTimer {
-    width: 100%;
-    color: $dark;
-    padding: 10px;
-    display: flex;
-    padding-top: 0;
-    max-width: 565px;
-    position: relative;
-    flex-direction: column;
-    box-sizing: border-box;
+}
 
-    .dollarValue {
-      width: 100%;
-      height: 65px;
-      display: flex;
-      padding-left: 20px;
-      align-items: center;
-      box-sizing: border-box;
-      background-color: $extraLightGrey;
-      @extend .LargeResponsiveFont;
-    }
+.dollarValue {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  border-top: 4px solid $light;
+  background-color: $extraLightGrey;
+  @extend .XLargeResponsiveFont;
+  @extend .paddingOne;
+}
 
-    .timerDisplayContainer {
-      width: 100%;
-      display: flex;
-      color: $darkGrey;
-      max-width: 565px;
-      margin-top: 10px;
-      padding: 10px 20px;
-      align-items: center;
-      flex-direction: row;
-      box-sizing: border-box;
-      border-radius: 0 0 10px 10px;
-      background-color: $extraLightGrey;
-      justify-content: space-between;
+.timerDisplay {
+  width: 100%;
+  display: flex;
+  color: $darkGrey;
+  align-items: center;
+  flex-direction: row;
+  box-sizing: border-box;
+  border-top: 4px solid $light;
+  border-radius: 0 0 10px 10px;
+  background-color: $lightGrey;
+  justify-content: space-between;
+  @extend .paddingTwo;
 
-      .timerDisplay {
-        @extend .responsiveFont;
-      }
-
-      .resetButton {
-        padding: 0;
-        color: $warning;
-        background-color: transparent;
-        @extend .buttonBaseStyle;
-        @extend .responsiveFont;
-      }
-    }
+  .timer {
+    @extend .responsiveFont;
   }
 }
 
 .taskInput {
   width: 100%;
-  padding: 10px;
   display: flex;
-  max-width: 565px;
-  position: relative;
   align-items: center;
-  border-radius: 10px;
   align-items: center;
   box-sizing: border-box;
   flex-direction: column;
   background-color: $light;
-
-  .inputGuard {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: absolute;
-    border-radius: 10px;
-  }
-  .showSetRateWarning {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    color: $warning;
-    position: absolute;
-    align-items: center;
-    border-radius: 10px;
-    justify-content: center;
-    background-color: $light;
-  }
+  border-radius: 10px 10px 0 0;
+  @extend .inputPadding;
 
   form {
     width: 100%;
     display: flex;
     position: relative;
 
+    .inputGuard {
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      position: absolute;
+      border-radius: 10px;
+    }
+    .showWarning {
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      color: $warning;
+      position: absolute;
+      align-items: center;
+      border-radius: 10px 10px 0 0;
+      justify-content: center;
+      border: 2px solid $warning;
+      background-color: $light;
+    }
+
     input {
       width: 70%;
       outline: none;
       color: $dark;
-      padding: 20px;
+      padding: 20px 18px;
       border-style: none;
       box-sizing: border-box;
-      border-radius: 10px 0 0 10px;
       font-family: $primaryFont;
-      background-color: $lightGrey;
-      border: 2px solid $lightGrey;
+      border: 2px solid $mediumGrey;
+      border-radius: 10px 0 0 0;
+      background-color: $extraLightGrey;
       @extend .mediumResponsiveFont;
 
       &:focus {
@@ -303,7 +355,7 @@ html {
       color: $dark;
       padding: 20px;
       background-color: $mediumGrey;
-      border-radius: 0 10px 10px 0;
+      border-radius: 0 10px 0 0;
       border: 2px solid $mediumGrey;
       @extend .mediumResponsiveFont;
       @extend .buttonBaseStyle;
@@ -330,64 +382,26 @@ html {
     }
   }
 }
+
 .taskDetails {
   width: 100%;
   color: $dark;
   display: flex;
-  max-width: 565px;
-  margin-top: 10px;
   position: relative;
+  margin-bottom: 5px;
   box-sizing: border-box;
   flex-direction: column;
 
-  .nameAndValue {
-    display: flex;
-    flex-direction: column;
-    .taskName {
-      width: 100%;
-      display: flex;
-      font-size: 1em;
-      max-width: 565px;
-      color: $darkGrey;
-      align-items: center;
-      box-sizing: border-box;
-      padding: 20px 30px 10px 30px;
-      border-radius: 10px 10px 0 0;
-      justify-content: space-between;
-      background-color: $extraLightGrey;
-    }
-    .dollarValue {
-      width: 100%;
-      display: flex;
-      font-size: 1.3em;
-      padding: 20px 30px;
-      align-items: center;
-      box-sizing: border-box;
-      background-color: $light;
-    }
-  }
-  .timerDisplayContainer {
+  .taskName {
     width: 100%;
     display: flex;
-    max-width: 565px;
+    font-size: 1em;
     color: $darkGrey;
-    padding: 10px 30px;
     align-items: center;
-    flex-direction: row;
     box-sizing: border-box;
-    border-radius: 0 0 10px 10px;
+    @extend .paddingOne;
     justify-content: space-between;
-    background-color: $extraLightGrey;
-    .timerDisplay {
-      @extend .responsiveFont;
-    }
-    .resetButton {
-      padding: 0;
-      color: $warning;
-      background-color: transparent;
-      @extend .buttonBaseStyle;
-      @extend .responsiveFont;
-    }
+    background-color: $lightGrey;
   }
 }
 
@@ -466,99 +480,54 @@ html {
   }
   .dollarSign {
     &:before {
-      top: 2px;
+      top: 1.45px;
+      left: 9px;
     }
   }
 }
-
 @media (min-width: 425px) {
+  .paddingOne {
+    padding-top: 18px;
+    padding-right: 30px;
+    padding-bottom: 12px;
+    padding-left: 30px;
+  }
+  .paddingTwo {
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+  }
   .mediumResponsiveFont {
     font-size: 1.1em;
   }
-  .LargeResponsiveFont {
+  .largeResponsiveFont {
     font-size: 1.8em;
+  }
+  .XLargeResponsiveFont {
+    font-size: 1.9em;
   }
   .dollarSign {
     &:before {
-      top: 0;
+      top: 1.2px;
+      left: 8px;
     }
   }
 }
-@media (min-width: 900px) {
-  .LargeResponsiveFont {
-    font-size: 2em;
+@media (min-width: 600px) {
+  .paddingOne {
+    padding-top: 18px;
+    padding-right: 40px;
+    padding-bottom: 12px;
+    padding-left: 40px;
   }
-  .container {
-    h2 {
-      align-self: start;
-      margin: 0 0 20px 40px;
-    }
+  .paddingTwo {
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-left: 40px;
   }
-
-  .primaryControls {
-    max-width: 100%;
-    flex-direction: row;
-
-    .inputAndDisplay {
-      max-width: 45%;
-      padding-right: 5px;
-      border-radius: 10px 0 0 10px;
-
-      form {
-        div {
-          input {
-            border-radius: 10px 0 0 0;
-          }
-          button {
-            border-radius: 0;
-          }
-          .errorMessage {
-            border-radius: 10px 0 0 0;
-          }
-        }
-      }
-      .valueBreakdown {
-        border-radius: 0 0 0 10px;
-      }
-    }
-
-    .primaryTimer {
-      padding: 10px;
-      max-width: 55%;
-      padding-left: 5px;
-      border-radius: 0 10px 10px 0;
-
-      .dollarValue {
-        border-radius: 0 10px 0 0;
-      }
-
-      .timerDisplayContainer {
-        border-radius: 0 0 10px 0;
-      }
-    }
-  }
-
-  .taskInput {
-    max-width: 100%;
-  }
-  .taskDetails {
-    max-width: 100%;
-    .nameAndValue {
-      flex-direction: row;
-      .taskName {
-        width: 60%;
-        background-color: $light;
-        border-radius: 10px 0 0 0;
-      }
-      .dollarValue {
-        width: 40%;
-        border-radius: 0 10px 0 0;
-        border-left: 2px solid $mediumGrey;
-      }
-    }
-    .timerDisplayContainer {
-      border-top: 2px solid $mediumGrey;
-      max-width: 100%;
-    }
+  .inputPadding {
+    padding: 20px;
   }
 }
