Debugging some issue with form on diffent devices

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -69,6 +69,25 @@ html body {
   position: absolute;
 }
 
+input[type='number'] {
+  -webkit-appearance: textfield;
+     -moz-appearance: textfield;
+          appearance: textfield;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+          appearance: none;
+  margin: 0;
+}
+
+input[type='text'] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .redButton {
   padding: 0;
   color: #ff1400;
